--- a/SRC/index.html
+++ b/SRC/index.html
@@ -10,14 +10,15 @@
 <body>
      <!-- Cabeçalho -->
 	 <header>
-	  <h1>Casa dos Calçados</h1>
+	  <h1>Livros do Mundo</h1>
 	  </header>
 	  <!-- Grid de produtos -->
 	  <main class="container">
 	   <section class="product-container">
-	    <div class="card1">
+	    <div class="card">
 	     <div class="product-image" id="img-1">
-          <h3>Tênis Puma</h3>
+        <img src="Faherenheit451.jpeg">
+          <h3>Fahereint 451-</h3>
             <p>Este tênis é muito bom pelo fato de ...<p>
             <p>
               R$ 
@@ -26,9 +27,9 @@
           <a href="#" class="bth">Comprar</a>
          </div>
         </div>
-		<div class="card2">
+		<div class="card">
 	     <div class="product-image" id="img-1">
-          <h3>Tênis Nike</h3>
+          <h3>Laranja Mecânica-</h3>
             <p>Este tênis é muito bom pelo fato de ...<p>
             <p>
               R$ 
@@ -37,9 +38,9 @@
           <a href="#" class="bth">Comprar</a>
          </div>
         </div>
-		<div class="card3">
+		<div class="card">
 	     <div class="product-image" id="img-1">
-          <h3>Tênis Adidas</h3>
+          <h3>1984-George Orwell</h3>
             <p>Este tênis é muito bom pelo fato de ...<p>
             <p>
               R$ 
@@ -48,9 +49,10 @@
           <a href="#" class="bth">Comprar</a>
          </div>
         </div>
-		<div class="card4">
+		<div class="card">
 	     <div class="product-image" id="img-1">
-          <h3>Tênis All-Star</h3>
+        <img src="">
+          <h3>Mitologia Nórdica-Neil Gaiman</h3>
             <p>Este tênis é muito bom pelo fato de ...<p>
             <p>
               R$ 
@@ -59,9 +61,9 @@
           <a href="#" class="bth">Comprar</a>
          </div>
         </div>
-		<div class="card5">
+		<div class="card">
 	     <div class="product-image" id="img-1">
-          <h3>Tênis Olimpukus</h3>
+          <h3>Na pior em Londres e Paris-George Orwell</h3>
             <p>Este tênis é muito bom pelo fato de ...<p>
             <p>
               R$ 
@@ -70,11 +72,22 @@
           <a href="#" class="bth">Comprar</a>
          </div>
         </div>
+        <div class="card">
+          <div class="product-image" id="img-1">
+             <h3>Cosmos-Carl Sagan</h3>
+               <p>Este tênis é muito bom pelo fato de ...<p>
+               <p>
+                 R$ 
+           <span class="bold">129,99</span>
+               </p>
+             <a href="#" class="bth">Comprar</a>
+            </div>
+           </div>
        </section>  
+       </main>
      <!-- Rodapé -->
 	 <footer>
       <p>Casa dos Calçados © 2023
 	 </footer>
 </body>
 </html>
-  
